# ai_and_math

./: .gitignore  .gitmodules  README.md
DSL/src/baby_Triton/: 1-add.py  3-target.py  5-ir.py
ai/d2l/ch2/: 2.7.py
ai/docx/: TODO.md  start.md
ai/micrograd/: graphviz.py  graphviz_dot.py
ai/src/SKNN/: CMakeLists.txt
ai/src/SKNN/SK_NN/: CMakeLists.txt  makefile
ai/src/SKNN/SK_NN/include/sk_nn/: sk_nn.h  sk_nn_arena.h  sk_nn_config.h  sk_nn_defs.h
ai/src/SKNN/SK_NN/src/: CMakeLists.txt
ai/src/SKNN/SK_NN/src/sk_nn/: CMakeLists.txt  sk_nn_arena.c
ai/src/SKNN/docx/: TODO.md
ai/src/SKNN/example/: main.c
ai/src/SKNN/include/: sk_nn.h  sk_nn_arena.h  sk_nn_defs.h  sk_nn_mat.h  sk_nn_model.h
ai/src/SKNN/include/core/: sk_nn_mem.h  sk_nn_memory.h
ai/src/SKNN/include/sk_nn/: sk_nn.h
ai/src/SKNN/scripts/: minist_torch.py  mnist.py
ai/src/SKNN/src/sk_nn/: CMakeLists.txt  sk_nn_arena.c  sk_nn_mat.c
ai/src/SKNN/src/sk_nn/core/: sk_nn_mem.c  sk_nn_memory.c
ai/src/micrograd/: micrograd_from_scratch.py
ai/victorzhou/Neural_Networks/: feedforward.py  mse_loss.py  neurons.py
algorithm/src/Hacker's_Delight/: 2.1.c
ch2/: pytorch.py
cuda/docx/basic-cuda/: basic-cuda.md
cuda/src/: tt  vector_add.cu
cuda/src/basic_cuda/: 01-vector-add.cu  Makefile  detect_arch.cu
cuda/src/sample/: learn_opt.cu
cxx/src/stl/: 2.1.cpp  3.1.cpp  makefile
cxx/templates/: template_class.cpp
d2l/ch2/: 2.1.py  2.2.py  2.3.py  2.4.py  2.5.py  2.6.py
d2l/ch3/: 3.1.py
dsp/docx/: fft.md
dsp/src/: dft.py  dsp.h  fft_data.txt  fft_pipeline.py  gauss.c  learn_fft.py  pingyu.py  simple_fft.c  uniform.c
kaikaidatawhale/src/: CMakeLists.txt
kaikaidatawhale/src/1.course/: CMakeLists.txt  main.cpp
kaikaidatawhale/src/2.course/: CMakeLists.txt  main.cpp
kaikaidatawhale/src/2.course/include/data/: tensor.hpp
math100/: 1-10.c
riscv/rvv/src/: abs_rvv.c
rust/docx/: rust.md
tilelang/docx/: tilelang笔记.md
triton/docx/: triton_puzzles.md  triton学习笔记.md
(+47 files in other folders)
